--- a/session001/notebooks/sandbox.ipynb
+++ b/session001/notebooks/sandbox.ipynb
@@ -16,6 +16,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Memoize:\n",
+    "    def __init__(self, f):\n",
+    "        self.f = f\n",
+    "        self.memo = {}\n",
+    "    \n",
+    "    def __call__(self, *args):\n",
+    "        if args not in self.memo.keys():\n",
+    "            self.memo[args] = self.f(*args)\n",
+    "        \n",
+    "        return self.memo[args]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@Memoize\n",
+    "def factorial(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return n * factorial(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "311 ns ± 8.46 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit factorial(600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "322 ns ± 3.39 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit factorial(600)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
